<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.CreateAccountActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="20dp"
        app:cardPreventCornerOverlap="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/credential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameEdtLout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="#D40606"
                    app:helperTextTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/first_name"
                        android:inputType="textAutoComplete"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameEdtLout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="#D40606"
                    app:helperTextTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameEdt"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textAutoComplete"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailCreateLout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="#D40606"
                    app:helperTextTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phnCreateLout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="#D40606"
                    app:helperTextTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        app:prefixText="+91"
                        app:prefixTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass_createlout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="#D40606"
                    app:helperTextTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textVisiblePassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:helperTextTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/conPassLout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:endIconMode="password_toggle"
                    app:endIconTint="#1D1414"
                    app:helperTextTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/con_passEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.cardview.widget.CardView
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/credential"
                android:layout_margin="15dp"
                android:elevation="2dp"
                app:cardBackgroundColor="@color/teal_700"
                app:cardCornerRadius="12dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createBtn"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height = "wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/create_account"
                    android:textColor="@color/black" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn"
                android:layout_centerInParent="true"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/backLogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/log_in"
                    android:textColor="@color/purple_500" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>